gnb component and menu button component

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,3 +1,11 @@
+/* Base */
 @import "normalize";
-@import "varivables";
+@import "variables";
+// @import "functions";
+@import "base";
+// @import "utils";
+
+/* Controls */
+
+/* Modules */
 @import "views";
