--- a/src/scss/_views.scss
+++ b/src/scss/_views.scss
@@ -56,5 +56,8 @@
     text-decoration: none;
     margin-top: 15px;
     color: #000;
+    .letter-unit {
+      display: inline-block;
+    }
   }
 }
