--- a/src/scss/_views.scss
+++ b/src/scss/_views.scss
@@ -61,3 +61,38 @@
     }
   }
 }
+
+.view-Career {
+  padding-top: 300px;
+  transition: padding-top 0.9s cubic-bezier(0.05, 0.6, 0.42, 0.95), opacity 0.9s;
+  opacity: 0;
+  &.on {
+    padding-top: 100px;
+    opacity: 1;
+  }
+  .view-CareerItem {
+    margin: 0 1rem 6rem;
+    .year {
+      font-size: 0.8rem;
+      font-weight: 700;
+      letter-spacing: 0.1rem;
+      margin-bottom: 0.6rem;
+    }
+    .companyname {
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 1.8rem;
+      margin-bottom: 1.4rem;
+    }
+    .part {
+      font-size: 1.1rem;
+      font-weight: 700;
+      // letter-spacing: 0.1rem;
+      margin-bottom: 0.6rem;
+    }
+    .skill {
+      font-size: 0.9rem;
+      font-weight: 700;
+    }
+  }
+}
