--- a/src/scss/_views.scss
+++ b/src/scss/_views.scss
@@ -96,3 +96,43 @@
     }
   }
 }
+
+.view-Experience {
+  padding-top: 300px;
+  transition: padding-top 0.9s cubic-bezier(0.05, 0.6, 0.42, 0.95), opacity 0.9s;
+  opacity: 0;
+  &.on {
+    padding-top: 100px;
+    opacity: 1;
+  }
+  .experience-item {
+    clear: both;
+    overflow: hidden;
+    margin: 0 1rem 4rem;
+
+    display: flex;
+    .year {
+      font-size: 0.8rem;
+      font-weight: 700;
+      min-width: 2.5rem;
+    }
+    .month {
+      font-size: 0.8rem;
+      font-weight: 700;
+      min-width: 1.3rem;
+    }
+    .title {
+      font-size: 1.8rem;
+      font-weight: 500;
+      margin-top: -0.3rem;
+      margin-bottom: 0.4rem;
+    }
+    .category,
+    .release,
+    .client {
+      font-size: 0.9rem;
+      font-weight: 700;
+      margin-bottom: 0.3rem;
+    }
+  }
+}
