--- a/src/scss/_views.scss
+++ b/src/scss/_views.scss
@@ -62,6 +62,16 @@
   }
 }
 
+.view-NavMini {
+  position: fixed;
+  bottom: 0;
+  .text-label {
+    &.active {
+      font-weight: bold;
+    }
+  }
+}
+
 .view-Career {
   padding-top: 300px;
   transition: padding-top 0.9s cubic-bezier(0.05, 0.6, 0.42, 0.95), opacity 0.9s;
@@ -163,5 +173,15 @@
   .tag {
     font-size: 0.8rem;
     font-weight: 700;
+  }
+}
+
+.view-Me {
+  padding-top: 300px;
+  transition: padding-top 0.9s cubic-bezier(0.05, 0.6, 0.42, 0.95), opacity 0.9s;
+  opacity: 0;
+  &.on {
+    padding-top: 100px;
+    opacity: 1;
   }
 }
