Make Playground Structures

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,9 +1,9 @@
 /* Base */
 @import "normalize";
 @import "variables";
-// @import "functions";
+@import "functions";
 @import "base";
-// @import "utils";
+@import "utils";
 
 /* Controls */
 
