--- a/src/scss/_views.scss
+++ b/src/scss/_views.scss
@@ -65,7 +65,7 @@
 }
 
 .view-NavMini {
-  position: absolute;
+  position: fixed;
   bottom: 2rem;
   left: 1rem;
   padding: 0 0.5rem;
@@ -217,42 +217,47 @@
   }
   .playground-footer {
     // width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 2rem;
     right: 1rem;
     .num-nav {
       display: inline-block;
       border: 0;
       text-decoration: underline;
-      margin-left: -2rem;
+      margin-left: -1rem;
       font-weight: 500;
+      background-color: transparent;
     }
     .btn-back-forward {
+      text-decoration: none;
+      font-size: 3rem;
+
       // @include dotBackground;
       // width: 4rem;
       // height: 4rem;
       // display: inline-block;
 
-      border: solid black;
-      border-width: 0 2px 2px 0;
-      display: inline-block;
-      padding: 0.6rem;
-      position: relative;
+      // border: solid black;
+      // border-width: 0 2px 2px 0;
+      // display: inline-block;
+      // padding: 0.6rem;
+      // position: relative;
 
-      &.forward {
-        transform: rotate(135deg);
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-      }
-      &.back {
-        // margin-right: -0.7rem;
-        // margin-bottom: 0.5rem;
-
-        margin-left: -0.7rem;
-        margin-top: 4rem;
-        margin-bottom: 1rem;
-        transform: rotate(-45deg);
-      }
+      // &.forward {
+      //   transform: rotate(-45deg);
+      //   // margin-right: 1rem;
+      //   margin-top: 2rem;
+      //   margin-bottom: 2rem;
+      // }
+      // &.back {
+      //   // margin-right: -0.7rem;
+      //   // margin-bottom: 0.5rem;
+      //   transform: rotate(135deg);
+      //   // margin-right: 1rem;
+      //   margin-left: 0.7rem;
+      //   margin-top: 4rem;
+      //   margin-bottom: 1rem;
+      // }
     }
   }
 }
