--- a/src/scss/_views.scss
+++ b/src/scss/_views.scss
@@ -3,12 +3,12 @@
 // view-Header
 // ==========================================================================
 .view-Header {
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.8) 25%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  // background: linear-gradient(
+  //   0deg,
+  //   rgba(255, 255, 255, 0) 0%,
+  //   rgba(255, 255, 255, 0.8) 25%,
+  //   rgba(255, 255, 255, 1) 100%
+  // );
   height: 5rem;
   position: fixed;
   width: 100vw;
@@ -238,8 +238,9 @@
   }
 }
 
-.view-PlaygroundItem {
-  margin: 0 1rem 2rem;
+.view-Playground {
+  // margin: 0 1rem 2rem;
+
   .title {
     font-size: 1.3rem;
     font-weight: 500;
@@ -247,6 +248,11 @@
   .tag {
     font-size: 0.8rem;
     font-weight: 700;
+  }
+  .playground-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
