--- a/v2/src/view/main.html
+++ b/v2/src/view/main.html
@@ -5,12 +5,12 @@
     </h1>
 </header>
 <main>
-    <div>
+    <!-- <div>
         <ul>
             <li>Skeleton UI framework (https://github.com/macaos/Skeleton-UI)</li>
             <li>Util</li>
         </ul>
-    </div>
+    </div> -->
     <!-- <p style="font-size: 10rem;">&#128539;</p>
     <p>&#x1F601;</p> -->
     <!-- <div id="view-tags" class="view-tags">
