--- a/v2/src/scss/_base.scss
+++ b/v2/src/scss/_base.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Noto+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;700&family=Noto+Sans:wght@400;700&display=swap");
 html {
     font-size: 62.5%;
 }
@@ -6,6 +6,7 @@ html {
 body {
     font-family: "Montserrat", "Noto Sans", sans-serif;
     font-size: 1.4rem;
+    color: #333;
 }
 
 h1,
