--- a/v2/src/scss/style.scss
+++ b/v2/src/scss/style.scss
@@ -8,8 +8,17 @@
     display: flex;
     justify-content: space-between;
     font-weight: 700;
-    margin-top: 1rem;
-    margin-bottom: 10rem;
+    // margin-top: 1rem;
+    // margin-bottom: 10rem;
+    position: fixed;
+    width: calc(100% - 4rem);
+    left: 0;
+    top: 0;
+    padding: 2rem;
+    background-color: rgba(255, 255, 255, 0.658);
+}
+main {
+    padding-top: 20rem;
 }
 
 .btn-tag {
@@ -93,27 +102,39 @@
     &-career {
     }
     &-works {
+        .items {
+            .item {
+                margin-bottom: 4rem;
+            }
+        }
         .year {
-            font-size: 1.8rem;
+            font-size: 2.5rem;
             font-weight: 600;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
         .group-year {
             .group-month {
-                display: flex;
-                align-items: center;
-                margin-bottom: 1rem;
+                // display: flex;
+                // align-items: center;
+                margin-bottom: 1.8rem;
                 .month {
-                    font-size: 1.4rem;
+                    // font-size: 2rem;
                     font-weight: 600;
                     margin-left: 0.2rem;
-                    width: 2rem;
+                    width: 2.5rem;
                     // float: left;
+                    display: inline-block;
+                }
+                .btn-tag {
+                    display: inline-block;
                 }
 
                 .title {
                     font-family: "Noto Sans";
                     font-size: 1.4rem;
+                    margin-left: 3.2rem;
+                    margin-top: 0.8rem;
+                    // display: inline-block;
                     // float: left;
                     // font-weight: 700;
                 }
