Update Tag Design

--- a/v2/src/view/main.html
+++ b/v2/src/view/main.html
@@ -1,8 +1,11 @@
-<header>
+<header class="header">
     <h1 class="logo">
-        <div>MA</div>
-        <div>CAO</div>
+        <div class="item">MA</div>
+        <div class="item">CAO</div>
     </h1>
+    <h2 class="sub-tit">
+        <div>PLAYGROUND</div>
+    </h2>
 </header>
 <main>
     <!-- <div>
@@ -19,6 +22,11 @@
             <li class="btn-tag">app<span>2</span></li>
         </ul>
     </div> -->
+    <ul id="view-plays" class="view view-plays">
+        <li>
+            <a>Scroll Effect</a>
+        </li>
+    </ul>
     <div id="view-career" class="view view-career">
         <h2>&#x1F601; Career</h2>
         <ul class="items">
@@ -72,7 +80,7 @@
         </ul>
     </div>
     <div id="view-skills" class="view view-skills">
-        <h2>&#x1F601; Skills</h2>
+        <h2>🛠️ Skills</h2>
         <ul class="items">
             <li class="item">
                 <div class="name">Now</div>
@@ -98,7 +106,7 @@
         </ul>
     </div>
     <div id="view-works" class="view view-works">
-        <h2>&#x1F601; Works</h2>
+        <h2>🧗 Works</h2>
 
 
         <!-- <span class="btn-tag-filter">
