--- a/v2/src/scss/style.scss
+++ b/v2/src/scss/style.scss
@@ -4,18 +4,25 @@
 .wrapper {
     padding: 2rem;
 }
-.logo {
-    display: flex;
-    justify-content: space-between;
-    font-weight: 700;
+.header {
+    .logo {
+        font-weight: 700;
+        margin-bottom: 0;
+    }
+    // display: flex;
+    // justify-content: space-between;
+
     // margin-top: 1rem;
     // margin-bottom: 10rem;
     position: fixed;
-    width: calc(100% - 4rem);
+    // width: calc(100% - 4rem);
     left: 0;
     top: 0;
     padding: 2rem;
-    background-color: rgba(255, 255, 255, 0.658);
+    // background-color: rgba(255, 255, 255, 0.658);
+    .item {
+        display: inline-block;
+    }
 }
 main {
     padding-top: 20rem;
@@ -23,13 +30,14 @@ main {
 
 .btn-tag {
     display: inline-block;
-    padding: 0.3rem 0.7rem 0.4rem;
-    border-radius: 0.7rem;
+    padding: 0.2rem 0.5rem 0.3rem;
+    border-radius: 0.3rem;
     font-size: 1.1rem;
-    border: 1px solid rgb(228, 228, 228);
-    color: #999;
-    background-color: rgb(245, 245, 245);
+    border: 1px solid #6f6f8134;
+    color: #6f6f81;
+    background-color: #6f6f811f;
     margin-right: 0.5rem;
+    margin-bottom: 0.6rem;
 
     &.large {
         padding: 1rem 2rem;
@@ -39,8 +47,11 @@ main {
     }
     &.work {
         padding: 0.2rem 0.5rem 0.3rem;
-        border-radius: 0.3rem;
-        font-weight: bold;
+
+        // font-weight: bold;
+        color: #d56d6a;
+        background-color: #d56e6a21;
+        border-color: #d56e6a42;
         &.ko {
             font-family: "Noto Sans";
         }
@@ -99,8 +110,10 @@ main {
             }
         }
     }
-    &-career {
+    &-plays {
+        margin-bottom: 3rem;
     }
+
     &-works {
         .items {
             .item {
@@ -133,7 +146,7 @@ main {
                     font-family: "Noto Sans";
                     font-size: 1.4rem;
                     margin-left: 3.2rem;
-                    margin-top: 0.8rem;
+                    margin-top: 0.2rem;
                     // display: inline-block;
                     // float: left;
                     // font-weight: 700;
@@ -141,8 +154,4 @@ main {
             }
         }
     }
-}
-
-.footer {
-    // margin-bottom: 1rem;
 }
