Create Playground Items

--- a/v2/src/scss/style.scss
+++ b/v2/src/scss/style.scss
@@ -112,6 +112,14 @@ main {
     }
     &-plays {
         margin-bottom: 3rem;
+        .items {
+            .item {
+                margin-bottom: 1rem;
+                .title {
+                    display: inline-block;
+                }
+            }
+        }
     }
 
     &-works {
