--- a/v2/src/view/main.html
+++ b/v2/src/view/main.html
@@ -22,11 +22,26 @@
             <li class="btn-tag">app<span>2</span></li>
         </ul>
     </div> -->
-    <ul id="view-plays" class="view view-plays">
-        <li>
-            <a>Scroll Effect</a>
-        </li>
-    </ul>
+    <div id="view-plays" class="view view-plays">
+        <ul class="items">
+            <li class="item">
+                <div class="btn-tag">Vanilla</div>
+                <div class="title">Scroll Effect</div>
+            </li>
+            <li class="item">
+                <div class="btn-tag">SVG</div>
+                <div class="title">Filter Effect</div>
+            </li>
+            <li class="item">
+                <div class="btn-tag">React</div>
+                <div class="title">Text Rolling</div>
+            </li>
+            <li class="item">
+                <div class="btn-tag">React</div>
+                <div class="title">Drag List</div>
+            </li>
+        </ul>
+    </div>
     <div id="view-career" class="view view-career">
         <h2>&#x1F601; Career</h2>
         <ul class="items">
