Start React Type

--- a/v2/src/view/main.html
+++ b/v2/src/view/main.html
@@ -25,7 +25,7 @@
     <div id="view-plays" class="view view-plays">
         <ul class="items">
             <li class="item">
-                <div class="btn-tag">Vanilla</div>
+                <div class="btn-tag">Vanilla JS</div>
                 <div class="title">Scroll Effect</div>
             </li>
             <li class="item">
@@ -39,6 +39,14 @@
             <li class="item">
                 <div class="btn-tag">React</div>
                 <div class="title">Drag List</div>
+            </li>
+            <li class="item">
+                <div class="btn-tag">Vinilla JS</div>
+                <div class="title">DatePicker</div>
+            </li>
+            <li class="item">
+                <div class="btn-tag">Vinilla JS</div>
+                <div class="title">삼각함수 테스트</div>
             </li>
         </ul>
     </div>
