--- a/v3/src/scss/style.scss
+++ b/v3/src/scss/style.scss
@@ -1,13 +1,58 @@
 @import "reset";
 @import "base";
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
+}
+
+.App {
+    width: 100%;
+    height: 100%;
+}
+
+.view-main {
+    width: 100%;
+    height: 100%;
+}
+
+.view-menu {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .btn {
+        display: block;
+        background: none;
+        border: 0;
+        font-size: 3.4rem;
+        font-weight: 700;
+        margin-bottom: 2rem;
+        letter-spacing: -0.1rem;
+    }
+    // background-color: red;
+}
+
 .wrapper {
     padding: 2rem;
 }
 .header {
+    width: 100%;
     .logo {
         font-weight: 700;
         margin-bottom: 0;
+        font-size: 2rem;
+        letter-spacing: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     // display: flex;
     // justify-content: space-between;
@@ -18,10 +63,11 @@
     // width: calc(100% - 4rem);
     left: 0;
     top: 0;
-    padding: 2rem;
+    padding: 2rem 0;
     // background-color: rgba(255, 255, 255, 0.658);
     .item {
         display: inline-block;
+        // margin-right: 1rem;
     }
 }
 main {
@@ -80,16 +126,7 @@ main {
         letter-spacing: -0.1rem;
         margin-bottom: 3rem;
     }
-    // &-tags {
-    //     .btn-tag {
-    //         background-color: aquamarine;
-    //         display: inline-block;
-    //         padding: 1rem 2rem;
-    //         font-weight: bold;
-    //         font-size: 2rem;
-    //         border-radius: 2rem;
-    //     }
-    // }
+
     .items {
         .item {
             margin-bottom: 3rem;
