--- a/v3/src/scss/style.scss
+++ b/v3/src/scss/style.scss
@@ -22,12 +22,17 @@ body {
     height: 100%;
 }
 
+.page-tit {
+    margin-top: 15rem;
+}
+
 .view-menu {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    align-items: flex-end;
+    padding-left: 2rem;
     .btn {
         display: block;
         background: none;
@@ -40,9 +45,9 @@ body {
     // background-color: red;
 }
 
-.wrapper {
-    padding: 2rem;
-}
+// .wrapper {
+//     padding: 2rem;
+// }
 .header {
     width: 100%;
     .logo {
@@ -50,9 +55,9 @@ body {
         margin-bottom: 0;
         font-size: 2rem;
         letter-spacing: 1rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
     }
     // display: flex;
     // justify-content: space-between;
@@ -63,7 +68,7 @@ body {
     // width: calc(100% - 4rem);
     left: 0;
     top: 0;
-    padding: 2rem 0;
+    padding: 2rem;
     // background-color: rgba(255, 255, 255, 0.658);
     .item {
         display: inline-block;
@@ -159,7 +164,8 @@ main {
         }
     }
 
-    &-works {
+    &-experience {
+        padding: 2rem;
         .items {
             .item {
                 margin-bottom: 4rem;
