--- a/v3/src/scss/style.scss
+++ b/v3/src/scss/style.scss
@@ -3,23 +3,23 @@
 
 html,
 body {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
 }
 
 #root {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
 }
 
 .App {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
 }
 
 .view-main {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
 }
 
 .page-tit {
@@ -27,20 +27,23 @@ body {
 }
 
 .view-menu {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     display: flex;
     // justify-content: center;
     align-items: flex-end;
     padding-left: 2rem;
+    padding-top: 10rem;
     .btn {
         display: block;
         background: none;
         border: 0;
-        font-size: 3.4rem;
+        font-size: 2rem;
         font-weight: 700;
         margin-bottom: 2rem;
         letter-spacing: -0.1rem;
+        color: #3f98eb;
+        text-decoration: underline;
     }
     // background-color: red;
 }
