Fixed Header Scroll Evt, Modify StyleSheet

--- a/v3/src/scss/style.scss
+++ b/v3/src/scss/style.scss
@@ -24,6 +24,7 @@ body {
 
 .page-tit {
     margin-top: 15rem;
+    margin-bottom: 5rem;
 }
 
 .view-menu {
@@ -180,6 +181,7 @@ main {
             margin-bottom: 1.5rem;
         }
         .group-year {
+            margin-bottom: 10rem;
             .group-month {
                 // display: flex;
                 // align-items: center;
