--- a/v4/sass/_markdown1.scss
+++ b/v4/sass/_markdown1.scss
@@ -1,297 +1,549 @@
 .ash-markdown-1 {
-    body {
-        font-family: Helvetica, arial, sans-serif;
-        font-size: 14px;
-        line-height: 1.6;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        background-color: white;
-        padding: 30px; }
-     
-     body > *:first-child {
-        margin-top: 0 !important; }
-     body > *:last-child {
-        margin-bottom: 0 !important; }
-     
-     a {
-        color: #4183C4; }
-     a.absent {
-        color: #cc0000; }
-     a.anchor {
-        display: block;
-        padding-left: 30px;
-        margin-left: -30px;
-        cursor: pointer;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0; }
-     
-     h1, h2, h3, h4, h5, h6 {
-        margin: 20px 0 10px;
-        padding: 0;
-        font-weight: bold;
-        -webkit-font-smoothing: antialiased;
-        cursor: text;
-        position: relative; }
-     
-     h1:hover a.anchor, h2:hover a.anchor, h3:hover a.anchor, h4:hover a.anchor, h5:hover a.anchor, h6:hover a.anchor {
-        text-decoration: none; }
-     
-     h1 tt, h1 code {
-        font-size: inherit; }
-     
-     h2 tt, h2 code {
-        font-size: inherit; }
-     
-     h3 tt, h3 code {
-        font-size: inherit; }
-     
-     h4 tt, h4 code {
-        font-size: inherit; }
-     
-     h5 tt, h5 code {
-        font-size: inherit; }
-     
-     h6 tt, h6 code {
-        font-size: inherit; }
-     
-     h1 {
-        font-size: 28px;
-        color: black; }
-     
-     h2 {
-        font-size: 24px;
-        border-bottom: 1px solid #cccccc;
-        color: black; }
-     
-     h3 {
-        font-size: 18px; }
-     
-     h4 {
-        font-size: 16px; }
-     
-     h5 {
-        font-size: 14px; }
-     
-     h6 {
-        color: #777777;
-        font-size: 14px; }
-     
-     p, blockquote, ul, ol, dl, li, table, pre {
-        margin: 15px 0; }
-     
-     hr {
-        border: 0 none;
-        color: #cccccc;
+    $brandColor: #713DF8;
+    $color_1: #4183C4;
+    $color_2: #cc0000;
+    $color_3: #373530;
+    $color_4: #777777;
+    $color_5: #cccccc;
+    $color_6: #333333;
+    $font-family_1: Helvetica, arial, sans-serif;
+    $background-color_1: white;
+    $background-color_2: #f0f0f0;
+    $background-color_3: transparent;
+
+body {
+	font-family: $font-family_1;
+	font-size: 14px;
+	line-height: 1.6;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: $background-color_1;
+	padding: 30px;
+	>* {
+		&:first-child {
+			margin-top: 0 !important;
+		}
+		&:last-child {
+			margin-bottom: 0 !important;
+		}
+	}
+	>h2 {
+		&:first-child {
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+	>h1 {
+		&:first-child {
+			margin-top: 0;
+			padding-top: 0;
+			+ {
+				h2 {
+					margin-top: 0;
+					padding-top: 0;
+				}
+			}
+		}
+	}
+	>h3 {
+		&:first-child {
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+	>h4 {
+		&:first-child {
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+	>h5 {
+		&:first-child {
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+	>h6 {
+		&:first-child {
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+}
+a {
+	color: $color_1;
+	&:first-child {
+		h1 {
+			margin-top: 0;
+			padding-top: 0;
+		}
+		h2 {
+			margin-top: 0;
+			padding-top: 0;
+		}
+		h3 {
+			margin-top: 0;
+			padding-top: 0;
+		}
+		h4 {
+			margin-top: 0;
+			padding-top: 0;
+		}
+		h5 {
+			margin-top: 0;
+			padding-top: 0;
+		}
+		h6 {
+			margin-top: 0;
+			padding-top: 0;
+		}
+	}
+}
+a.absent {
+	color: $color_2;
+}
+a.anchor {
+	display: block;
+	padding-left: 30px;
+	margin-left: -30px;
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+}
+h1 {
+	margin: 20px 0 10px;
+	padding: 0;
+	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
+	cursor: text;
+	position: relative;
+	font-size: 28px;
+	color: $color_3;
+	&:hover {
+		a.anchor {
+			text-decoration: none;
+		}
+	}
+	tt {
+		font-size: inherit;
+	}
+	code {
+		font-size: inherit;
+	}
+	p {
+		margin-top: 0;
+	}
+}
+h2 {
+	margin: 60px 0 10px;
+	padding: 0;
+	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
+	cursor: text;
+	position: relative;
+	font-size: 24px;
+	color: $color_3;
+    &::after {
+        content: "";
+        width: 15%;
+        max-width: 50px;
         height: 4px;
-        padding: 0;
-     }
-     
-     body > h2:first-child {
-        margin-top: 0;
-        padding-top: 0; }
-     body > h1:first-child {
-        margin-top: 0;
-        padding-top: 0; }
-     body > h1:first-child + h2 {
-        margin-top: 0;
-        padding-top: 0; }
-     body > h3:first-child, body > h4:first-child, body > h5:first-child, body > h6:first-child {
-        margin-top: 0;
-        padding-top: 0; }
-     
-     a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h5, a:first-child h6 {
-        margin-top: 0;
-        padding-top: 0; }
-     
-     h1 p, h2 p, h3 p, h4 p, h5 p, h6 p {
-        margin-top: 0; }
-     
-     li p.first {
-        display: inline-block; }
-     li {
-        margin: 0; }
-     ul, ol {
-        padding-left: 30px; }
-     
-     ul :first-child, ol :first-child {
-        margin-top: 0; }
-     
-     dl {
-        padding: 0; }
-     dl dt {
-        font-size: 14px;
-        font-weight: bold;
-        font-style: italic;
-        padding: 0;
-        margin: 15px 0 5px; }
-     dl dt:first-child {
-        padding: 0; }
-     dl dt > :first-child {
-        margin-top: 0; }
-     dl dt > :last-child {
-        margin-bottom: 0; }
-     dl dd {
-        margin: 0 0 15px;
-        padding: 0 15px; }
-     dl dd > :first-child {
-        margin-top: 0; }
-     dl dd > :last-child {
-        margin-bottom: 0; }
-     
-     blockquote {
-        border-left: 4px solid #dddddd;
-        padding: 0 15px;
-        color: #777777; }
-     blockquote > :first-child {
-        margin-top: 0; }
-     blockquote > :last-child {
-        margin-bottom: 0; }
-     
-     table {
-        padding: 0;border-collapse: collapse; }
-     table tr {
-        border-top: 1px solid #cccccc;
-        background-color: white;
-        margin: 0;
-        padding: 0; }
-     table tr:nth-child(2n) {
-        background-color: #f8f8f8; }
-     table tr th {
-        font-weight: bold;
-        border: 1px solid #cccccc;
-        margin: 0;
-        padding: 6px 13px; }
-     table tr td {
-        border: 1px solid #cccccc;
-        margin: 0;
-        padding: 6px 13px; }
-     table tr th :first-child, table tr td :first-child {
-        margin-top: 0; }
-     table tr th :last-child, table tr td :last-child {
-        margin-bottom: 0; }
-     
-     img {
-        max-width: 100%; }
-     
-     span.frame {
         display: block;
-        overflow: hidden; }
-     span.frame > span {
-        border: 1px solid #dddddd;
-        display: block;
-        float: left;
-        overflow: hidden;
-        margin: 13px 0 0;
-        padding: 7px;
-        width: auto; }
-     span.frame span img {
-        display: block;
-        float: left; }
-     span.frame span span {
-        clear: both;
-        color: #333333;
-        display: block;
-        padding: 5px 0 0; }
-     span.align-center {
-        display: block;
-        overflow: hidden;
-        clear: both; }
-     span.align-center > span {
-        display: block;
-        overflow: hidden;
-        margin: 13px auto 0;
-        text-align: center; }
-     span.align-center span img {
-        margin: 0 auto;
-        text-align: center; }
-     span.align-right {
-        display: block;
-        overflow: hidden;
-        clear: both; }
-     span.align-right > span {
-        display: block;
-        overflow: hidden;
-        margin: 13px 0 0;
-        text-align: right; }
-     span.align-right span img {
-        margin: 0;
-        text-align: right; }
-     span.float-left {
-        display: block;
-        margin-right: 13px;
-        overflow: hidden;
-        float: left; }
-     span.float-left span {
-        margin: 13px 0 0; }
-     span.float-right {
-        display: block;
-        margin-left: 13px;
-        overflow: hidden;
-        float: right; }
-     span.float-right > span {
-        display: block;
-        overflow: hidden;
-        margin: 13px auto 0;
-        text-align: right; }
-     
-     code, tt {
-        margin: 0 2px;
-        padding: 0 5px;
-        white-space: nowrap;
-        border: 1px solid #eaeaea;
-        background-color: #f8f8f8;
-        border-radius: 3px; }
-     
-     pre code {
-        margin: 0;
-        padding: 0;
-        white-space: pre;
-        border: none;
-        background: transparent; }
-     
-     .highlight pre {
-        background-color: #f8f8f8;
-        border: 1px solid #cccccc;
-        font-size: 13px;
-        line-height: 19px;
-        overflow: auto;
-        padding: 6px 10px;
-        border-radius: 3px; }
-     
-     pre {
-        background-color: #f8f8f8;
-        border: 1px solid #cccccc;
-        font-size: 13px;
-        line-height: 19px;
-        overflow: auto;
-        padding: 6px 10px;
-        border-radius: 3px; }
-     pre code, pre tt {
-        background-color: transparent;
-        border: none; }
-     
-     sup {
-        font-size: 0.83em;
-        vertical-align: super;
-        line-height: 0;
-     }
-     * {
-          -webkit-print-color-adjust: exact;
-     }
-     @media screen and (min-width: 914px) {
-        body {
-           width: 854px;
-           margin:0 auto;
-        }
-     }
-     @media print {
-          table, pre {
-               page-break-inside: avoid;
-          }
-          pre {
-               word-wrap: break-word;
-          }
-     }
+        background-color: $brandColor;
+        margin-top: 10px;
+        border-radius: 5px;
+    }
+	&:hover {
+		a.anchor {
+			text-decoration: none;
+		}
+	}
+	tt {
+		font-size: inherit;
+	}
+	code {
+		font-size: inherit;
+	}
+	p {
+		margin-top: 0;
+	}
+}
+h3 {
+	margin: 30px 0 10px;
+	padding: 0;
+	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
+	cursor: text;
+	position: relative;
+	font-size: 18px;
+	&:hover {
+		a.anchor {
+			text-decoration: none;
+		}
+	}
+	tt {
+		font-size: inherit;
+	}
+	code {
+		font-size: inherit;
+	}
+	p {
+		margin-top: 0;
+	}
+}
+h4 {
+	margin: 20px 0 10px;
+	padding: 0;
+	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
+	cursor: text;
+	position: relative;
+	font-size: 16px;
+	&:hover {
+		a.anchor {
+			text-decoration: none;
+		}
+	}
+	tt {
+		font-size: inherit;
+	}
+	code {
+		font-size: inherit;
+	}
+	p {
+		margin-top: 0;
+	}
+}
+h5 {
+	margin: 20px 0 10px;
+	padding: 0;
+	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
+	cursor: text;
+	position: relative;
+	font-size: 14px;
+	&:hover {
+		a.anchor {
+			text-decoration: none;
+		}
+	}
+	tt {
+		font-size: inherit;
+	}
+	code {
+		font-size: inherit;
+	}
+	p {
+		margin-top: 0;
+	}
+}
+h6 {
+	margin: 20px 0 10px;
+	padding: 0;
+	font-weight: bold;
+	-webkit-font-smoothing: antialiased;
+	cursor: text;
+	position: relative;
+	color: $color_4;
+	font-size: 14px;
+	&:hover {
+		a.anchor {
+			text-decoration: none;
+		}
+	}
+	tt {
+		font-size: inherit;
+	}
+	code {
+		font-size: inherit;
+	}
+	p {
+		margin-top: 0;
+	}
+}
+p {
+	margin: 15px 0;
+    // font-weight: 500;
+    color: $color_6;
+}
+blockquote {
+    
+	margin: 15px 0;
+	border-left: 3px solid #656565;
+	padding: 0 10px;
+	color: $color_4;
+	
+		&>:first-child {
+			margin-top: 0;
+		}
+		&>:last-child {
+			margin-bottom: 0;
+		}
+	
+}
+ul {
+	margin: 15px 0;
+	list-style-type: disc;
+	padding-left: 30px;
+	&:first-child {
+		margin-top: 0;
+	}
+}
+ol {
+	margin: 15px 0;
+	list-style-type: disc;
+	padding-left: 30px;
+	&:first-child {
+		margin-top: 0;
+	}
+}
+dl {
+	margin: 15px 0;
+	padding: 0;
+	dt {
+		font-size: 14px;
+		font-weight: bold;
+		font-style: italic;
+		padding: 0;
+		margin: 15px 0 5px;
+		&:first-child {
+			padding: 0;
+		}
+		
+			& >:first-child {
+				margin-top: 0;
+			}
+			& >:last-child {
+				margin-bottom: 0;
+			}
+		
+	}
+	dd {
+		margin: 0 0 15px;
+		padding: 0 15px;
+		> {
+			&>:first-child {
+				margin-top: 0;
+			}
+			&>:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+li {
+	margin: 15px 0;
+    line-height: 20px;
+	margin: 0;
+	p.first {
+		display: inline-block;
+	}
+}
+table {
+	margin: 15px 0;
+	padding: 0;
+	border-collapse: collapse;
+	tr {
+		border-top: 1px solid #cccccc;
+		background-color: $background-color_1;
+		margin: 0;
+		padding: 0;
+		&:nth-child(2n) {
+			background-color: $background-color_2;
+		}
+		th {
+			font-weight: bold;
+			border: 1px solid #cccccc;
+			margin: 0;
+			padding: 6px 13px;
+			&:first-child {
+				margin-top: 0;
+			}
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		td {
+			border: 1px solid #cccccc;
+			margin: 0;
+			padding: 6px 13px;
+			&:first-child {
+				margin-top: 0;
+			}
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+pre {
+	margin: 15px 0;
+	background-color: $background-color_2;
+	border: 1px solid #cccccc;
+	font-size: 13px;
+	line-height: 19px;
+	overflow: auto;
+	padding: 6px 10px;
+	border-radius: 3px;
+	code {
+		margin: 0;
+		padding: 0;
+		white-space: pre;
+		border: none;
+		background: transparent;
+		background-color: $background-color_3;
+		border: none;
+	}
+	tt {
+		background-color: $background-color_3;
+		border: none;
+	}
+}
+hr {
+	border: 0 none;
+    border-bottom: 1px solid $color_5;
+	color: $color_5;
+	height: 4px;
+	padding: 0;
+}
+img {
+	max-width: 100%;
+}
+span.frame {
+	display: block;
+	overflow: hidden;
+	>span {
+		border: 1px solid #dddddd;
+		display: block;
+		float: left;
+		overflow: hidden;
+		margin: 13px 0 0;
+		padding: 7px;
+		width: auto;
+	}
+	span {
+		img {
+			display: block;
+			float: left;
+		}
+		span {
+			clear: both;
+			color: $color_6;
+			display: block;
+			padding: 5px 0 0;
+		}
+	}
+}
+span.align-center {
+	display: block;
+	overflow: hidden;
+	clear: both;
+	>span {
+		display: block;
+		overflow: hidden;
+		margin: 13px auto 0;
+		text-align: center;
+	}
+	span {
+		img {
+			margin: 0 auto;
+			text-align: center;
+		}
+	}
+}
+span.align-right {
+	display: block;
+	overflow: hidden;
+	clear: both;
+	>span {
+		display: block;
+		overflow: hidden;
+		margin: 13px 0 0;
+		text-align: right;
+	}
+	span {
+		img {
+			margin: 0;
+			text-align: right;
+		}
+	}
+}
+span.float-left {
+	display: block;
+	margin-right: 13px;
+	overflow: hidden;
+	float: left;
+	span {
+		margin: 13px 0 0;
+	}
+}
+span.float-right {
+	display: block;
+	margin-left: 13px;
+	overflow: hidden;
+	float: right;
+	>span {
+		display: block;
+		overflow: hidden;
+		margin: 13px auto 0;
+		text-align: right;
+	}
+}
+code {
+	margin: 1px 0 3px;
+	padding: 0 5px;
+	white-space: nowrap;
+	border: 1px solid #d0d0d0;
+	background-color: $background-color_2;
+	border-radius: 3px;
+    display: inline-block;
+
+}
+tt {
+	margin: 0 2px;
+	padding: 0 5px;
+	white-space: nowrap;
+	border: 1px solid #eaeaea;
+	background-color: $background-color_2;
+	border-radius: 3px;
+}
+.highlight {
+	pre {
+		background-color: $background-color_2;
+		border: 1px solid #cccccc;
+		font-size: 13px;
+		line-height: 19px;
+		overflow: auto;
+		padding: 6px 10px;
+		border-radius: 3px;
+	}
+}
+sup {
+	font-size: 0.83em;
+	vertical-align: super;
+	line-height: 0;
+}
+* {
+	-webkit-print-color-adjust: exact;
+}
+@media screen and (min-width: 914px) {
+	body {
+		width: 854px;
+		margin: 0 auto;
+	}
+}
+@media print {
+	table {
+		page-break-inside: avoid;
+	}
+	pre {
+		page-break-inside: avoid;
+		word-wrap: break-word;
+	}
+}
+
+    
+    
 }
